--- a/package.json
+++ b/package.json
@@ -21,18 +21,19 @@
     "@ant-design/icons": "^5.3.1",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.11.5",
     "@fontsource/inter": "^5.0.17",
     "@fontsource/poppins": "^5.0.12",
     "@fontsource/public-sans": "^5.0.17",
     "@fontsource/roboto": "^5.0.12",
     "@mui/base": "^5.0.0-beta.38",
     "@mui/lab": "^5.0.0-alpha.167",
-    "@mui/material": "^5.15.12",
+    "@mui/material": "^5.15.19",
     "@mui/system": "^5.15.12",
     "@svgr/webpack": "^8.1.0",
     "@vitejs/plugin-react": "^4.2.1",
     "apexcharts": "^3.49.0",
+    "axios": "^1.7.2",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
     "lodash": "^4.17.21",
@@ -53,6 +54,7 @@
     "vite": "^5.2.10",
     "vite-jsconfig-paths": "^2.0.1",
     "web-vitals": "^3.5.2",
+    "yarn": "^1.22.22",
     "yup": "^1.4.0"
   },
   "eslintConfig": {
