--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@mui/base": "^5.0.0-beta.38",
     "@mui/icons-material": "^5.15.20",
     "@mui/lab": "^5.0.0-alpha.167",
-    "@mui/material": "^5.15.19",
+    "@mui/material": "^5.16.0",
     "@mui/system": "^5.15.12",
+    "@mui/x-data-grid": "^7.10.0",
     "@svgr/webpack": "^8.1.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "@welldone-software/why-did-you-render": "^8.0.3",
     "apexcharts": "^3.49.0",
     "axios": "^1.7.2",
     "formik": "^2.4.5",
@@ -94,7 +96,7 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "prettier": "^3.2.5",
     "react-error-overlay": "6.0.11"
   }
