--- a/package.json
+++ b/package.json
@@ -3,11 +3,7 @@
   "version": "1.3.0",
   "private": true,
   "homepage": "https://mantisdashboard.io/free",
-  "author": {
-    "name": "CodedThemes",
-    "email": "codedthemes@gmail.com",
-    "url": "https://codedthemes.com/"
-  },
+  "author": "CodedThemes <codedthemes@gmail.com> (https://codedthemes.com/)",
   "scripts": {
     "start": "vite",
     "build": "vite build",
@@ -19,9 +15,11 @@
   "dependencies": {
     "@ant-design/colors": "^7.0.2",
     "@ant-design/icons": "^5.3.1",
+    "@babel/plugin-syntax-flow": "^7.24.7",
+    "@babel/plugin-transform-react-jsx": "^7.25.2",
     "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@fontsource/inter": "^5.0.17",
     "@fontsource/poppins": "^5.0.12",
     "@fontsource/public-sans": "^5.0.17",
@@ -33,27 +31,34 @@
     "@mui/system": "^5.15.12",
     "@mui/x-data-grid": "^7.10.0",
     "@svgr/webpack": "^8.1.0",
+    "@types/node": "^22.0.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-react": "^4.2.1",
     "@welldone-software/why-did-you-render": "^8.0.3",
     "apexcharts": "^3.49.0",
     "axios": "^1.7.2",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
+    "jquery": "^3.7.1",
     "lodash": "^4.17.21",
     "process": "^0.11.10",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-device-detect": "^2.2.3",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-number-format": "^5.3.3",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
     "simplebar-react": "^3.2.4",
     "slick-carousel": "^1.8.1",
     "swr": "^2.2.5",
-    "typescript": "^5.5.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4",
     "util": "^0.12.5",
     "vite": "^5.2.10",
     "vite-jsconfig-paths": "^2.0.1",
@@ -88,16 +93,23 @@
     "@babel/core": "^7.24.0",
     "@babel/eslint-parser": "^7.23.10",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "eslint": "^8.56.0",
+    "@eslint/js": "^9.8.0",
+    "eslint": "9.x",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "globals": "^15.8.0",
     "prettier": "^3.2.5",
-    "react-error-overlay": "6.0.11"
-  }
+    "react-error-overlay": "6.0.11",
+    "typescript-eslint": "^7.18.0"
+  },
+  "description": "[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT) [![Price](https://img.shields.io/badge/price-FREE-0098f7.svg)](https://github.com/codedthemes/mantis-free-react-admin-template/blob/main/LICENSE) [![GitHub package version](https://img.shields.io/github/package-json/v/codedthemes/mantis-free-react-admin-template)](https://github.com/codedthemes/mantis-free-react-admin-template/)",
+  "main": "index.js",
+  "keywords": [],
+  "license": "ISC"
 }
